fixed form layout on mobile

--- a/themes/whetstone/static/sass/contact.scss
+++ b/themes/whetstone/static/sass/contact.scss
@@ -1,4 +1,10 @@
+main.single-page {
+    padding: 0 !important;
+}
+
 section.contact-card {
+    margin: 0 auto;
+    padding: 0;
     h2 {
         text-align: center;
     }
@@ -6,8 +12,11 @@ section.contact-card {
         align-items: flex-start;
         display: flex;
         .col {
-            flex: 1 1 50%;
+            flex: 1 1 100%;
+            margin: 0 auto;
+            padding: 0;
             .row {
+                padding: 0 0 1em 0;
                 address {
                     flex: 1 1 100%;
                     ul {
@@ -39,7 +48,7 @@ section.contact-card {
                         top: 0;
                         right: auto;
                         left: 0;
-                        bottom: 0;
+                        bottom: .5em;
                     }
                     padding: 0;
                     text-align: left !important; 
@@ -52,7 +61,7 @@ section.contact-card {
 form {
     margin: 0 auto;
     max-width: 100%;
-    padding: 1em;
+    padding: 0;
     fieldset {
         margin: 0 auto;
         max-width: 100%;
